Changed fixed footer to sticky. Removed scrollbar on list when not needed.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,14 +6,20 @@
 
 html {
     position: relative;
-    min-height: 100%;
+    height: 100%;
 }
 
 body {
     background: #E3F2FD;
     color: white;
     font-family: 'Roboto', sans-serif;
-    margin-bottom: 100px;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.content {
+    flex: 1;
 }
 
 h1,
@@ -33,7 +39,7 @@ h2,
 }
 
 #list-group {
-    max-height: 500px;
+    height: 500px;
     overflow-y: auto;
     margin: 10px 0;
 }
@@ -55,8 +61,8 @@ h2,
 }
 
 #addon {
-  background-color: #002a5c;
-  color: white;
+    background-color: #002a5c;
+    color: white;
 }
 
 .list-group-item {
@@ -155,17 +161,14 @@ hr {
 }
 
 .footer {
-    position: fixed;
-    bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 70px;
     background-color: #002a5c;
-    margin-top: 70px;
+    margin-top: 30px;
 }
 
 .footer p {
-    padding-top: 20px;
+    padding-top: 13px;
     font-size: 20px;
     font-weight: lighter;
 }
